--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mobilabs/es6pakket",
-  "version": "0.0.0",
+  "version": "0.0.1-alpha.1",
   "description": "A boilerplate for building Javascript ES6 libraries with Pakket",
   "main": "./_dist/lib/es6pakket.js",
   "bin": {
@@ -61,7 +61,7 @@
     "nyc": "^15.0.0",
     "open": "^7.0.2",
     "opener": "^1.5.1",
-    "pakket": "0.0.0"
+    "pakket": "0.0.1-alpha.1"
   },
   "publishConfig": {
     "access": "public"
