--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mobilabs/es6pakket",
-  "version": "0.0.1-alpha.1",
+  "version": "0.0.1",
   "description": "A boilerplate for building Javascript ES6 libraries with Pakket",
   "main": "./_dist/lib/es6pakket.js",
   "bin": {
@@ -39,16 +39,16 @@
   },
   "homepage": "https://github.com/jclo/es6pakket",
   "dependencies": {
-    "nopt": "^4.0.1",
+    "nopt": "^4.0.3",
     "shelljs": "^0.8.3"
   },
   "devDependencies": {
     "chai": "^4.2.0",
     "coveralls": "^3.0.9",
-    "cross-env": "^7.0.0",
+    "cross-env": "^7.0.2",
     "del": "^5.1.0",
     "eslint": "^6.8.0",
-    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-config-airbnb-base": "^14.1.0",
     "eslint-plugin-import": "^2.20.1",
     "gulp": "^4.0.2",
     "gulp-concat": "^2.6.1",
@@ -56,12 +56,12 @@
     "gulp-header": "^2.0.9",
     "gulp-replace": "^1.0.0",
     "gulp-uglify-es": "^2.0.0",
-    "husky": "^4.2.1",
-    "mocha": "^7.0.1",
+    "husky": "^4.2.3",
+    "mocha": "^7.1.0",
     "nyc": "^15.0.0",
-    "open": "^7.0.2",
+    "open": "^7.0.3",
     "opener": "^1.5.1",
-    "pakket": "0.0.1-alpha.1"
+    "pakket": "0.0.1"
   },
   "publishConfig": {
     "access": "public"
