--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mobilabs/es6pakket",
-  "version": "0.0.1",
+  "version": "0.0.2-beta.1",
   "description": "A boilerplate for building Javascript ES6 libraries with Pakket",
   "main": "./_dist/lib/es6pakket.js",
   "bin": {
