--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "@mobilabs/es6pakket",
-  "version": "0.0.3-beta.4",
+  "version": "0.0.3-beta.5",
   "description": "A boilerplate for building Javascript ES6 libraries with Pakket",
   "main": "index.js",
+  "minified": "_dist/lib/es6pakket.min.js",
   "unpkg": "_dist/lib/es6pakket.min.js",
   "module": "_dist/lib/es6pakket.min.mjs",
   "bin": {
@@ -60,11 +61,11 @@
     "gulp-replace": "^1.0.0",
     "gulp-uglify-es": "^2.0.0",
     "husky": "^4.2.5",
-    "mocha": "^8.1.0",
+    "mocha": "^8.1.1",
     "nyc": "^15.1.0",
     "open": "^7.1.0",
     "opener": "^1.5.1",
-    "pakket": "0.0.2-beta.3"
+    "pakket": "0.0.2-beta.4"
   },
   "publishConfig": {
     "access": "public"
