--- a/.npmignore
+++ b/.npmignore
@@ -1,8 +1,11 @@
-.DS_Store
-__trash
-_old_*
+*
 
-.nyc_output
-coverage
-node_modules
-private_repo
+!bin
+!src/**/*
+!tasks/**/*
+!test/**/*
+!.eslintignore
+!.eslintrc
+!.travis.yml
+!gulpfile.js
+!index.js
