--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@mobilabs/es6pakket",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A boilerplate for building Javascript ES6 libraries with Pakket",
   "main": "index.js",
   "minified": "_dist/lib/es6pakket.min.js",
-  "unpkg": "_dist/lib/es6pakket.min.js",
+  "unpkg": "_dist/lib/es6pakket.mjs",
   "module": "_dist/lib/es6pakket.min.mjs",
   "bin": {
     "es6pakket": "./bin/es6pakket.js"
@@ -65,7 +65,8 @@
     "nyc": "^15.1.0",
     "open": "^7.2.0",
     "opener": "^1.5.1",
-    "pakket": "^1.0.0"
+    "pakket": "^1.0.0",
+    "@mobilabs/es6kadoo": "1.0.2"
   },
   "publishConfig": {
     "access": "public"
