--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@mobilabs/es6pakket",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "A boilerplate for building Javascript ES6 libraries with Pakket",
-  "main": "index.js",
+  "main": "_dist/lib/es6pakket.js",
   "minified": "_dist/lib/es6pakket.min.js",
   "unpkg": "_dist/lib/es6pakket.mjs",
   "module": "_dist/lib/es6pakket.min.mjs",
@@ -22,6 +22,7 @@
     "app": "gulp runapp",
     "makeprivate": "gulp makeprivate && sh tasks/compress.sh ${npm_package_name} ${npm_package_version} @mobilabs",
     "makelib": "gulp build && gulp makedist && gulp makeprivate && sh tasks/compress.sh ${npm_package_name} ${npm_package_version}",
+    "prepare": "husky install",
     "doc": ""
   },
   "repository": {
@@ -42,40 +43,35 @@
   },
   "homepage": "https://github.com/jclo/es6pakket",
   "dependencies": {
-    "@mobilabs/kasar": "^1.0.4",
+    "@mobilabs/kasar": "^1.0.6",
     "nopt": "^5.0.0",
     "shelljs": "^0.8.4"
   },
   "devDependencies": {
-    "chai": "^4.2.0",
-    "coveralls": "^3.1.0",
+    "chai": "^4.3.4",
+    "coveralls": "^3.1.1",
     "cross-env": "^7.0.3",
     "del": "^6.0.0",
-    "eslint": "^7.18.0",
+    "eslint": "^7.30.0",
     "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-import": "^2.23.4",
     "esm": "^3.2.25",
     "gulp": "^4.0.2",
     "gulp-concat": "^2.6.1",
     "gulp-connect": "^5.7.0",
     "gulp-header": "^2.0.9",
-    "gulp-replace": "^1.0.0",
+    "gulp-replace": "^1.1.3",
     "gulp-uglify-es": "^2.0.0",
-    "husky": "^4.3.8",
-    "mocha": "^8.2.1",
+    "husky": "^7.0.1",
+    "mocha": "^8.4.0",
     "nyc": "^15.1.0",
-    "open": "^7.3.1",
+    "open": "^8.2.1",
     "opener": "^1.5.2",
-    "pakket": "^1.0.3",
-    "@mobilabs/es6kadoo": "^1.0.7"
+    "pakket": "^1.0.4",
+    "@mobilabs/es6kadoo": "1.0.8"
   },
   "publishConfig": {
     "access": "public"
   },
-  "private": false,
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm run build && npm run makedist && npm run test && npm run check-coverage && npm run report"
-    }
-  }
+  "private": false
 }
