--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mobilabs/es6pakket",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "A boilerplate for building Javascript ES6 libraries with Pakket",
   "main": "_dist/lib/es6pakket.js",
   "minified": "_dist/lib/es6pakket.min.js",
@@ -43,7 +43,6 @@
   },
   "homepage": "https://github.com/jclo/es6pakket",
   "dependencies": {
-    "@mobilabs/kasar": "^1.0.6",
     "nopt": "^5.0.0",
     "shelljs": "^0.8.4"
   },
@@ -52,23 +51,23 @@
     "coveralls": "^3.1.1",
     "cross-env": "^7.0.3",
     "del": "^6.0.0",
-    "eslint": "^7.30.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-plugin-import": "^2.23.4",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.25.3",
     "esm": "^3.2.25",
     "gulp": "^4.0.2",
     "gulp-concat": "^2.6.1",
     "gulp-connect": "^5.7.0",
     "gulp-header": "^2.0.9",
     "gulp-replace": "^1.1.3",
-    "gulp-uglify-es": "^2.0.0",
-    "husky": "^7.0.1",
+    "gulp-uglify-es": "^3.0.0",
+    "husky": "^7.0.4",
     "mocha": "^8.4.0",
     "nyc": "^15.1.0",
-    "open": "^8.2.1",
+    "open": "^8.4.0",
     "opener": "^1.5.2",
-    "pakket": "^1.0.4",
-    "@mobilabs/es6kadoo": "1.0.8"
+    "pakket": "^1.0.5",
+    "@mobilabs/es6kadoo": "^1.0.9"
   },
   "publishConfig": {
     "access": "public"
