--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mobilabs/es6pakket",
-  "version": "1.0.8",
+  "version": "1.0.8.x",
   "description": "A boilerplate for building Javascript ES6 libraries with Pakket",
   "main": "_dist/lib/es6pakket.js",
   "minified": "_dist/lib/es6pakket.min.js",
@@ -43,31 +43,31 @@
   },
   "homepage": "https://github.com/jclo/es6pakket",
   "dependencies": {
-    "nopt": "^5.0.0",
+    "nopt": "^7.1.0",
     "shelljs": "^0.8.5"
   },
   "devDependencies": {
-    "chai": "^4.3.5",
+    "@mobilabs/es6kadoo": "^1.0.11",
+    "chai": "^4.3.7",
     "coveralls": "^3.1.1",
     "cross-env": "^7.0.3",
-    "del": "^6.0.0",
-    "eslint": "^7.32.0",
+    "del": "^6.1.1",
+    "eslint": "^8.40.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-import": "^2.27.5",
     "esm": "^3.2.25",
     "gulp": "^4.0.2",
     "gulp-concat": "^2.6.1",
     "gulp-connect": "^5.7.0",
     "gulp-header": "^2.0.9",
-    "gulp-replace": "^1.1.3",
+    "gulp-replace": "^1.1.4",
     "gulp-uglify-es": "^3.0.0",
-    "husky": "^7.0.4",
+    "husky": "^8.0.3",
     "mocha": "^8.4.0",
     "nyc": "^15.1.0",
-    "open": "^8.4.0",
+    "open": "^8.4.2",
     "opener": "^1.5.2",
-    "pakket": "^1.0.6",
-    "@mobilabs/es6kadoo": "^1.0.10"
+    "pakket": "^1.0.7"
   },
   "publishConfig": {
     "access": "public"
