--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mobilabs/es6pakket",
-  "version": "1.0.9",
+  "version": "1.0.9x",
   "description": "A boilerplate for building Javascript ES6 libraries with Pakket",
   "main": "_dist/lib/es6pakket.js",
   "minified": "_dist/lib/es6pakket.min.js",
@@ -10,18 +10,42 @@
     "es6pakket": "./bin/es6pakket.js"
   },
   "scripts": {
-    "build": "gulp build",
-    "watch": "gulp watch",
-    "dev": "gulp rundev",
+    "general": " --- GENERAL ---",
+
+    "build:js": " --- JAVASCRIPT --- ",
+    "build:js:dev": "node tasks/makejs.js",
+    "build:js:prod": "node tasks/makedist.js",
+
+    "build:css": " --- CSS --- ",
+
+    "build:generic": " --- BUILD (GENERIC) --- ",
+
+    "build:development": " --- BUILD (DEVELOPMENT) --- ",
+    "build:dev": "npm run build:js:dev",
+
+    "build:production": " --- BUILD (PRODUCTION) --- ",
+    "prebuild:prod": "npm run build:dev",
+    "build:prod": "npm run build:js:prod",
+
+    "testing": " --- TESTING --- ",
     "test": "cross-env NODE_ENV=test nyc --reporter=lcov mocha --require esm ./test/main.js",
-    "display-coverage": "opener ./coverage/lcov-report/index.html",
-    "check-coverage": "nyc check-coverage --statements 100 --branches 100 --functions 100 --lines 100",
-    "report-coverage": "nyc report --reporter=text-lcov | coveralls",
+    "display:coverage": "open -a safari ./coverage/lcov-report/index.html",
+    "check:coverage": "nyc check-coverage --statements 100 --branches 100 --functions 100 --lines 100",
+    "report:coverage": "nyc report --reporter=text-lcov | coveralls",
     "report": "nyc report",
-    "makedist": "gulp makedist",
-    "app": "gulp runapp",
-    "makeprivate": "gulp makeprivate && sh tasks/compress.sh ${npm_package_name} ${npm_package_version} @mobilabs",
-    "makelib": "gulp build && gulp makedist && gulp makeprivate && sh tasks/compress.sh ${npm_package_name} ${npm_package_version}",
+
+    "serving": " --- SERVING --- ",
+    "server:dev": "http-server --port 8080",
+    "server:prod": "http-server --port 8090",
+
+    "watch:js:css": " --- WATCHING --- ",
+    "watch:js": "nodemon --watch './src/**/*.js' --exec npm run build:dev",
+    "watch": "npm run watch:js",
+
+    "deployment": " --- DEPLOYMENT --- ",
+    "dep:private": "npm run build:prod && node tasks/makeprivatepackage.js && sh tasks/compress.sh ${npm_package_name} ${npm_package_version} @mobilabs",
+
+    "others": " --- OTHERS ---",
     "prepare": "husky install",
     "doc": ""
   },
@@ -47,27 +71,21 @@
     "shelljs": "^0.8.5"
   },
   "devDependencies": {
-    "@mobilabs/es6kadoo": "^1.0.11",
     "chai": "^4.3.7",
     "coveralls": "^3.1.1",
     "cross-env": "^7.0.3",
-    "del": "^6.1.1",
-    "eslint": "^8.40.0",
+    "eslint": "^8.41.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.27.5",
     "esm": "^3.2.25",
-    "gulp": "^4.0.2",
-    "gulp-concat": "^2.6.1",
-    "gulp-connect": "^5.7.0",
-    "gulp-header": "^2.0.9",
-    "gulp-replace": "^1.1.4",
-    "gulp-uglify-es": "^3.0.0",
+    "http-server": "^14.1.1",
     "husky": "^8.0.3",
     "mocha": "^8.4.0",
+    "nodemon": "^2.0.22",
     "nyc": "^15.1.0",
-    "open": "^8.4.2",
-    "opener": "^1.5.2",
-    "pakket": "^1.0.7"
+    "pakket": "^1.0.7",
+    "terser": "^5.17.4",
+    "@mobilabs/es6kadoo": "1.0.12"
   },
   "publishConfig": {
     "access": "public"
