--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "general": " --- GENERAL ---",
 
     "build:js": " --- JAVASCRIPT --- ",
-
     "build:js:dev": "node tasks/build.js.dev.js $1",
     "build:js:prod": "node tasks/build.js.prod.js $1",
 
@@ -30,11 +29,10 @@
     "build:prod": "npm run build:js:prod",
 
     "testing": " --- TESTING --- ",
-    "test": "cross-env NODE_ENV=test nyc --reporter=lcov mocha --require esm ./test/main.js",
+    "test": "cross-env NODE_ENV=test c8 --reporter=lcov mocha --require esm ./test/main.js",
     "display:coverage": "open -a safari ./coverage/lcov-report/index.html",
-    "check:coverage": "nyc check-coverage --statements 100 --branches 100 --functions 100 --lines 100",
-    "report:coverage": "nyc report --reporter=text-lcov | coveralls",
-    "report": "nyc report",
+    "check:coverage": "c8 check-coverage --statements 100 --branches 100 --functions 100 --lines 100",
+    "report": "c8 report",
 
     "serving": " --- SERVING --- ",
     "server:dev": "http-server --port 8080",
@@ -70,25 +68,24 @@
   },
   "homepage": "https://github.com/jclo/es6pakket",
   "dependencies": {
-    "nopt": "^7.1.0",
+    "nopt": "^7.2.0",
     "shelljs": "^0.8.5"
   },
   "devDependencies": {
-    "chai": "^4.3.7",
-    "coveralls": "^3.1.1",
+    "c8": "^9.0.0",
+    "chai": "4.3.10",
     "cross-env": "^7.0.3",
-    "eslint": "^8.41.0",
+    "eslint": "^8.56.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-import": "^2.29.1",
     "esm": "^3.2.25",
     "http-server": "^14.1.1",
     "husky": "^8.0.3",
     "mocha": "^8.4.0",
-    "nodemon": "^2.0.22",
-    "nyc": "^15.1.0",
-    "pakket": "^1.0.7",
-    "terser": "^5.17.4",
-    "@mobilabs/es6kadoo": "1.1.1"
+    "nodemon": "^3.0.2",
+    "pakket": "^1.1.0",
+    "terser": "^5.26.0",
+    "@mobilabs/es6kadoo": "2.0.0"
   },
   "publishConfig": {
     "access": "public"
