--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
 
     "deployment": " --- DEPLOYMENT --- ",
     "dep:prod": "rm -rf _dist-$npm_package_version && npm run build:prod && cp -r _dist _dist-$npm_package_version",
-    "dep:private": "npm run build:prod && node tasks/dep.private.js && sh tasks/compress.sh ${npm_package_name} ${npm_package_version} @mobilabs",
+    "dep:private:package": "npm run build:prod && node tasks/dep.private.js && sh tasks/compress.sh ${npm_package_name} ${npm_package_version} @mobilabs",
 
     "others": " --- OTHERS ---",
     "prepare": "husky install",
@@ -85,7 +85,14 @@
     "nodemon": "^3.0.2",
     "pakket": "^1.1.0",
     "terser": "^5.26.0",
-    "@mobilabs/es6kadoo": "2.0.1"
+    "@mobilabs/es6kadoo": "2.0.2"
+  },
+  "c8": {
+    "include": [
+      "src/**/*.js"
+    ],
+    "exclude": [],
+    "all": false
   },
   "publishConfig": {
     "access": "public"
