--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mobilabs/es6pakket",
-  "version": "2.1.2",
+  "version": "2.2.x",
   "description": "A boilerplate for building Javascript ES6 libraries with Pakket",
   "main": "_dist/lib/es6pakket.js",
   "minified": "_dist/lib/es6pakket.min.js",
@@ -48,7 +48,7 @@
     "dep:npm:private:package": "npm run build:prod && npm pack && sh scripts/dep.npm.private.sh ${npm_package_name} ${npm_package_version} @mobilabs",
 
     "others": " --- OTHERS ---",
-    "prepare": "husky install"
+    "prepare": "husky"
   },
   "repository": {
     "type": "git",
@@ -68,24 +68,24 @@
   },
   "homepage": "https://github.com/jclo/es6pakket",
   "dependencies": {
-    "nopt": "^7.2.0",
+    "nopt": "^7.2.1",
     "shelljs": "^0.8.5"
   },
   "devDependencies": {
-    "c8": "^9.0.0",
-    "chai": "4.3.10",
+    "c8": "^10.1.2",
+    "chai": "^4.4.1",
     "cross-env": "^7.0.3",
-    "eslint": "^8.56.0",
+    "eslint": "^8.57.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.29.1",
     "esm": "^3.2.25",
     "http-server": "^14.1.1",
-    "husky": "^8.0.3",
+    "husky": "^9.1.1",
     "mocha": "^8.4.0",
-    "nodemon": "^3.0.2",
-    "pakket": "^1.2.1",
-    "terser": "^5.26.0",
-    "@mobilabs/es6kadoo": "2.1.2"
+    "nodemon": "^3.1.4",
+    "pakket": "^1.3.0",
+    "terser": "^5.31.3",
+    "@mobilabs/es6kadoo": "2.2.1"
   },
   "c8": {
     "include": [
